Fix long text overflow

--- a/main.css
+++ b/main.css
@@ -440,6 +440,7 @@ a.lcolonq-button-link :active {
     padding-right: 1rem;
     height: 100vh;
     mask-image: linear-gradient(180deg, white 50%, transparent 95%);
+    overflow: hidden;
 }
 
 #lcolonq-gc-explainer h1 {
